add_subdirectory(aointegrals)
add_subdirectory(gauinterface)
add_subdirectory(atlas)
add_subdirectory(basisset)
add_subdirectory(cerr)
add_subdirectory(classtools)
add_subdirectory(controls)
add_subdirectory(fileio)
add_subdirectory(mointegrals)
add_subdirectory(molecule)
add_subdirectory(sdresponse)
add_subdirectory(singleslater)
add_subdirectory(quasinewton)
add_subdirectory(tools)
add_subdirectory(worker)
add_subdirectory(chronusQ)
