add_subdirectory(aointegrals)
add_subdirectory(gauinterface)
add_subdirectory(basisset)
add_subdirectory(cerr)
add_subdirectory(classtools)
add_subdirectory(controls)
add_subdirectory(fileio)
add_subdirectory(mointegrals)
add_subdirectory(coupledcluster)
add_subdirectory(molecule)
add_subdirectory(sdresponse)
add_subdirectory(realtime)
add_subdirectory(mollerplesset)
add_subdirectory(grid)
add_subdirectory(singleslater)
add_subdirectory(quasinewton)
add_subdirectory(tools)
add_subdirectory(worker)
add_subdirectory(python)

add_subdirectory(response)
add_subdirectory(qn)
add_subdirectory(newQNTest)
add_subdirectory(RESPHack)
add_subdirectory(numdiff)
