add_executable(RESPHack test.cpp)
target_link_libraries(RESPHack LINK_PUBLIC classtools)
target_link_libraries(RESPHack LINK_PUBLIC singleslater)
target_link_libraries(RESPHack LINK_PUBLIC grid)
target_link_libraries(RESPHack LINK_PUBLIC molecule)
target_link_libraries(RESPHack LINK_PUBLIC tools)
target_link_libraries(RESPHack LINK_PUBLIC cerr)
target_link_libraries(RESPHack LINK_PUBLIC gauinterface)
target_link_libraries(RESPHack LINK_PUBLIC controls)
target_link_libraries(RESPHack LINK_PUBLIC singleslater)
target_link_libraries(RESPHack LINK_PUBLIC aointegrals)
target_link_libraries(RESPHack LINK_PUBLIC mointegrals)
target_link_libraries(RESPHack LINK_PUBLIC basisset)
target_link_libraries(RESPHack LINK_PUBLIC response)
target_link_libraries(RESPHack LINK_PUBLIC fileio)
target_link_libraries(RESPHack LINK_PUBLIC coupledcluster)
target_link_libraries(RESPHack LINK_PUBLIC memory)
target_link_libraries(RESPHack LINK_PUBLIC numdiff)
target_link_libraries(RESPHack LINK_PUBLIC qn)
target_link_libraries(RESPHack LINK_PUBLIC worker)
target_link_libraries(RESPHack LINK_PUBLIC ${EXTERNAL_CQ_DEPS})

