add_library(aointegrals SHARED aointegrals.cpp aointegrals_builders.cpp
aointegrals_onee.cpp aointegrals_twoe.cpp aointegrals_complex_contract.cpp
aointegrals_real_contract_uniquegen.cpp
aointegrals_complex_contract_uniquegen.cpp
aointegrals_real_contract_percontract.cpp aointegrals_real_contract_direct.cpp
aointegrals_complex_contract_percontract.cpp aointegrals_complex_contract_direct.cpp
aointegrals_real_contract_N4.cpp aointegrals_real_contract_DF.cpp
aointegrals_complex_contract_N4.cpp aointegrals_complex_contract_DF.cpp
aointegrals_dkh.cpp)
