bin_PROGRAMS = chronQ
AM_CXXFLAGS= -I$(top_srcdir)/include
chronQ_SOURCES = chronQ.cpp
chronQ_LDADD = ../atlas/libatlas.a ../basisset/libbasisset.a ../cerr/libcerr.a ../classtools/libclasstools.a ../controls/libcontrols.a  ../mointegrals/libmointegrals.a ../molecule/libmolecule.a ../tools/libtools.a ../sdresponse/libsdresponse.a ../singleslater/libsingleslater.a ../aointegrals/libaointegrals.a ../worker/libworker.a ../matrix/libmatrix.a ../fileio/libfileio.a 
