add_executable(gentests gentests.cpp)
target_link_libraries(gentests LINK_PUBLIC classtools)
target_link_libraries(gentests LINK_PUBLIC singleslater)
target_link_libraries(gentests LINK_PUBLIC grid)
target_link_libraries(gentests LINK_PUBLIC grid2)
target_link_libraries(gentests LINK_PUBLIC molecule)
target_link_libraries(gentests LINK_PUBLIC tools)
target_link_libraries(gentests LINK_PUBLIC cerr)
target_link_libraries(gentests LINK_PUBLIC gauinterface)
target_link_libraries(gentests LINK_PUBLIC controls)
target_link_libraries(gentests LINK_PUBLIC singleslater)
target_link_libraries(gentests LINK_PUBLIC realtime)
target_link_libraries(gentests LINK_PUBLIC aointegrals)
target_link_libraries(gentests LINK_PUBLIC mointegrals)
target_link_libraries(gentests LINK_PUBLIC basisset)
target_link_libraries(gentests LINK_PUBLIC response)
target_link_libraries(gentests LINK_PUBLIC qn)
target_link_libraries(gentests LINK_PUBLIC dft)
target_link_libraries(gentests LINK_PUBLIC quantum)
target_link_libraries(gentests LINK_PUBLIC fileio)
target_link_libraries(gentests LINK_PUBLIC ${EXTERNAL_CQ_DEPS})

