add_executable(GRIDTest test.cxx)
target_link_libraries(GRIDTest PUBLIC classtools)
target_link_libraries(GRIDTest PUBLIC controls)
target_link_libraries(GRIDTest PUBLIC singleslater)
target_link_libraries(GRIDTest PUBLIC aointegrals)
target_link_libraries(GRIDTest PUBLIC mointegrals)
target_link_libraries(GRIDTest PUBLIC basisset)
target_link_libraries(GRIDTest PUBLIC response)
target_link_libraries(GRIDTest PUBLIC fileio)
target_link_libraries(GRIDTest PUBLIC ${EXTERNAL_CQ_DEPS})
