add_library(matrix
  double/matrix_constructor_double.cpp
  double/matrix_io_double.cpp
  double/matrix_miscmath_double.cpp
  double/matrix_miscop_double.cpp
  double/matrix_overload_double.cpp
  double/matrix_setters_double.cpp
  double/eigsrt_double.f
  double/pkconv_double.f
  complex/matrix_constructor_complex.cpp
  complex/matrix_io_complex.cpp
  complex/matrix_miscmath_complex.cpp
  complex/matrix_miscop_complex.cpp
  complex/matrix_overload_complex.cpp
  complex/matrix_setters_complex.cpp
  complex/eigsrt_complex.f
  complex/pkconv_complex.f)
  
