noinst_PROGRAMS = mattest
AM_CXXFLAGS= -I$(top_srcdir)/include
mattest_SOURCES = mattest.cpp mattest_double.cpp mattest_complex.cpp
mattest_LDADD = ../aointegrals/libaointegrals.a ../atlas/libatlas.a ../basisset/libbasisset.a ../cerr/libcerr.a ../classtools/libclasstools.a ../controls/libcontrols.a  ../mointegrals/libmointegrals.a ../molecule/libmolecule.a ../sdresponse/libsdresponse.a ../singleslater/libsingleslater.a ../worker/libworker.a ../matrix/libmatrix.a ../fileio/libfileio.a ../tools/libtools.a 


