add_library(molecule SHARED molecule.cpp)
if(APPLE)
target_link_libraries(molecule LINK_PUBLIC tools)
target_link_libraries(molecule LINK_PUBLIC cerr)
target_link_libraries(molecule LINK_PUBLIC ${EXTERNAL_CQ_DEPS})
endif()

if(USE_LIBINT)
if(BUILD_LIBINT)
 add_dependencies(molecule libint)
endif()
endif()
